# second-hardest-cs-thing

./: .gitignore  .luarc.json  DESCRIPTION  Makefile  README.md  index.html  index.qmd  justfile  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  renderer.R  robots.txt  second-hardest-cs-thing.Rproj  sitemap.xml  slides.html  slides.qmd  style.css
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-presentation.yaml  update-extensions.yaml
.quarto/_freeze/slides/execute-results/: html.json
.quarto/xref/: INDEX  e1f6891e
.well-known/: llms-full.txt  llms.txt
docs/: index.Rmd  index.html  index.qmd  theme.css
media/: social_media_card_creator.R
slides/: second-hardest-cs-thing.Rmd  second-hardest-cs-thing.css  second-hardest-cs-thing.html  solving-second-hardest-cs-problem.html
